--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "learn nodejs ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --harmony ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha"
   },
   "author": "",
   "license": "ISC",
@@ -18,10 +18,15 @@
     "express-session": "^1.15.1",
     "express-winston": "^2.2.0",
     "marked": "^0.3.6",
+    "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "mongolass": "^2.4.2",
     "objectid-to-timestamp": "^1.3.0",
     "sha1": "^1.1.1",
+    "supertest": "^3.0.0",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "istanbul": "^0.4.5"
   }
 }
